GNOME Bugzilla – Bug 665387
v4l2src: fix stepwise enumeration ignoring the highest values
Last modified: 2011-12-07 13:43:54 UTC
AFAICT, the max value is really a max value, and not the first value that is not in the set. I did not find a 100% clear statement of this on the web though. My camera does not give stepwise values, so I cannot test, hence filing in the hope that someone with such a camera can try it and double check it's correct.
Created attachment 202589 [details] [review] v4l2src: do not ignore the largest resolution The 'max' value isn't an STL style "one after the end" bound, but the largest allowed value.
Created attachment 202590 [details] [review] v4l2src: add a comment about a "hidden" assumption on rank values
Created attachment 202591 [details] [review] v4l2src: do not ignore the highest frame interval